@@ -1,12 +1,19 @@
 # constants.test --
 #    Test cases for the ::math::constants package
 #
+# This file contains a collection of tests for one or more of the Tcllib
+# procedures.  Sourcing this file into Tcl runs the tests and
+# generates output for errors.  No output means no errors were found.
+#
+# Copyright (c) 2004 by Arjen Markus. All rights reserved.
+#
+# RCS: @(#) $Id: constants.test,v 1.2 2004/07/05 15:33:21 kennykb Exp $
 
 package require tcltest
-namespace import ::tcltest::*
+namespace import -force ::tcltest::*
 
-#package require math::constants
-source "constants.tcl"
+source [file join [file dirname [info script]] constants.tcl]
+package require math::constants
 
 #
 # Test: do we get the constants into our namespace?
